Image Issue (Small Screens)
This commit will fix an issue where carousel images do not cover the intended area on small phones.

--- a/css/sass/partials/_responsive.scss
+++ b/css/sass/partials/_responsive.scss
@@ -679,6 +679,15 @@ $media-l: 1260px;
 
 }
 
+@media (max-width: 430px) {
+    .product-section .container .carousel-wrapper .carousel {
+        .swiper-wrapper .swiper-slide .swiper-zoom-container img {
+            width: auto;
+            height: 100%;
+        }
+    }
+}
+
 
 
 @media (max-width: 335px) {
